# Educreate

./: .env  .gitignore  README.md  app.py  chat_with_pdf.py  generate_questions.py  ingest.py  main.py  pyproject.toml  requirements.txt  test.py
templates/: chat.html  index.html  result.html
vector_store/: index.faiss  index.pkl
